using OP_CTV to implement BitVM Bridge

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# bitcoin = { version = "0.32.5",  features = ["rand-std", "serde"]}
 bitcoin = { version = "0.31.1", features = ["serde"] }
 secp256k1 = { version = "0.28.2", features = ["rand", "hashes", "serde", "global-context"] }
 serde = { version = "1.0.197", features = ["derive"] }
 sha2 = "0.10.8"
 thiserror = "1.0.57"
+bitcoincore-rpc = "0.19.0"
+local-ip-address = "0.4"
 
 [dev-dependencies]
 hex = "0.4.3"
