--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,11 @@ sha2 = "0.10.8"
 thiserror = "1.0.57"
 bitcoincore-rpc = "0.19.0"
 local-ip-address = "0.4"
+lazy_static = { version = "1.4.0", default-features = false, features = [
+    "spin_no_std",
+] }
 
 [dev-dependencies]
 hex = "0.4.3"
 serde_json = "1.0.114"
+
